--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-  <!-- 10-задача 
-       <div class="" id="container">
+  <!-- 10-задача -->
+       <!-- <div class="" id="container">
      <form  id="form">
         <p>
             <h4>Имя</h4>
@@ -20,16 +20,16 @@
         <button class="" id="btn1">Отправить</button>
        
     </form> 
-</div> -->
+</div>  -->
 
 
 
-<!-- 11-задача
+<!-- 11-задача -->
     <div id="div">
         <div id="kvadrad" style="width: 100px; height: 50px; background-color:black"></div>
         <button class="" id="right">right</button>
         <button class="" id="left">left</button>
-    </div> -->
+    </div>
 
  
 
@@ -40,6 +40,6 @@
 
 
 
-    <script src="./js/task12.js"></script>
+    <script src="./js/task11.js"></script>
 </body>
 </html>
